2005-12-22  Andy Wingo  <wingo@pobox.com>

	* AUTHORS: Updated.

	* gnome/gw/support/Makefile.am (support_DATA): Updated
	accordingly.

	* gnome/gw/support/slib.scm: New module, provides printf and
	glob:make-matcher. This removes the build dependency on slib.

	* gnome/gw/support/printf.scm: 
	* gnome/gw/support/glob.scm: 
	* gnome/gw/support/genwrite.scm: Pulled in from SLIB. Without
	modifications.

2005-10-13  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gtype.c (scm_gtype_interfaces): Signedness fix.

2005-09-17  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gobject/gtype.c (s_scm_gtype_interfaces): Fix GCC 4.0
	warnings.

2005-04-20  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/glib.scm (g-error-domain, g-error-code, g-error-message):
	New public functions.

2005-04-10  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gobject/gobject.c, gnome/gobject/gvalue.c,
	* gnome/gw/glib-support.c: Use the new macros.
	* gnome/gobject/gutil.h (GPOINTER_TO_SCM, SCM_TO_GPOINTER): New
	macros.
	
2005-04-09  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/glib-spec.scm (initialize): Fix gsize, gssize in- and 
	out-arguments.
	
	* gnome/gw/glib-spec.scm (post-call-arg-cg): Use newly-added function
	scm_c_raise_gerror.
	* gnome/gobject/Makefile.am (C_FILES): Added gutil.c
	* gnome/gobject/gobject.h: #include gutil.h
	* gnome/gobject/gutil.c, gnome/gobject/gutil.h: New files.

2005-04-07  Andreas Rottmann  <a.rottmann@gmx.at>

	* test-suite/gw-gobject.test, test-suite/gobject.test: Added a few
	tests relevant to the gvalue fixes.

	* gnome/gw/support/defs.scm (load-defs): Improve error handling a
	bit by re-raising stacked conditions where appropriate.

	* gnome/gobject/gvalue.c (scm_gvalue_primitive_get): Return a full
	goops instance when the gvalue contains an object.

	* gnome/gobject/gvalue.c (scm_gvalue_primitive_set): Fix
	scm_list_p() check, needs to wrapped with SCM_BOOL().
	(scm_gvalue_primitive_set): Also handle goops gobject instances.
